@@ -1,0 +1,395 @@
+package EPrints::Plugin::Screen::BatchEdit;
+
+use EPrints::Plugin::Screen;
+
+@ISA = ( 'EPrints::Plugin::Screen' );
+
+use strict;
+
+our @IGNORE_FIELDS = qw(
+	eprintid
+	rev_number
+	documents
+	dir
+	datestamp
+	lastmod
+	status_changed
+	succeeds
+	commentary
+	replacedby
+	metadata_visibility
+	fileinfo
+);
+
+sub new
+{
+	my( $class, %params ) = @_;
+
+	my $self = $class->SUPER::new(%params);
+	
+	$self->{actions} = [qw/ edit /];
+
+	# is linked to by the BatchEdit export plugin
+	$self->{appears} = [];
+
+	return $self;
+}
+
+sub allow_edit
+{
+	$_[0]->can_be_viewed
+}
+
+sub can_edit
+{
+	$_[0]->can_be_viewed
+}
+
+sub can_be_viewed
+{
+	my( $self ) = @_;
+
+	return 1;
+	return $self->allow( "eprint/archive/edit" );
+}
+
+sub redirect_to_me_url
+{
+	my( $self ) = @_;
+
+	my $cacheid = $self->{processor}->{session}->param( "cache" );
+
+	return $self->SUPER::redirect_to_me_url."&cache=$cacheid";
+}
+
+sub get_cache
+{
+	my( $self ) = @_;
+
+	my $processor = $self->{processor};
+	my $session = $processor->{session};
+
+	my $cacheid = $session->param( "cache" );
+
+	my $dataset = $session->get_repository->get_dataset( "cachemap" );
+	my $cache = $dataset->get_object( $session, $cacheid );
+
+	return $cache;
+}
+
+sub get_searchexp
+{
+	my( $self ) = @_;
+
+	my $processor = $self->{processor};
+	my $session = $processor->{session};
+
+	my $cacheid = $session->param( "cache" );
+
+	my $cache = $self->get_cache();
+
+	my $searchexp = EPrints::Search->new(
+		session => $session,
+		dataset => $session->get_repository->get_dataset( "eprint" ),
+		keep_cache => 1,
+	);
+
+	if( $searchexp )
+	{
+		$searchexp->from_string_raw( $cache->get_value( "searchexp" ) );
+		$searchexp->{"cache_id"} = $cacheid;
+	}
+
+	return $searchexp;
+}
+
+sub action_edit
+{
+	my( $self ) = @_;
+
+	my $processor = $self->{processor};
+	my $session = $processor->{session};
+
+	my $searchexp = $self->get_searchexp;
+	my $list = $searchexp->perform_search;
+
+	my $dataset = $searchexp->get_dataset;
+
+	my %changes = $self->get_changes( $dataset );
+
+	$list->map(sub {
+		my( $session, $dataset, $object ) = @_;
+
+		while(my( $fieldname, $opts ) = each %changes)
+		{
+			my $field = $dataset->get_field( $fieldname );
+			my $action = $opts->{"action"};
+			my $value = $opts->{"value"};
+			my $orig_value = $object->get_value( $fieldname );
+
+			if( $action eq "clear" )
+			{
+				$object->set_value( $fieldname,
+					$field->get_property( "multiple" ) ? [] : undef );
+			}
+			elsif( $action eq "replace" )
+			{
+				if( $field->get_property( "multiple" ) )
+				{
+				}
+				else
+				{
+					$object->set_value( $fieldname, $value );
+				}
+			}
+			elsif( $action eq "insert" )
+			{
+				$value = [$value, @$orig_value];
+				$object->set_value( $fieldname, $value );
+			}
+			elsif( $action eq "append" )
+			{
+				$value = [@$orig_value, $value];
+				$object->set_value( $fieldname, $value );
+			}
+		}
+
+		$object->commit;
+	});
+
+	if( %changes )
+	{
+		my $ul = $session->make_element( "ul" );
+		while(my( $fieldname, $opts ) = each %changes)
+		{
+			my $field = $dataset->get_field( $fieldname );
+			my $action = $opts->{"action"};
+			my $value = $opts->{"value"};
+			my $li = $session->make_element( "li" );
+			$ul->appendChild( $li );
+			$li->appendChild( $self->html_phrase( "applied_$action",
+				value => $field->render_single_value( $session, $value ),
+				fieldname => $session->html_phrase( "eprint_fieldname_$fieldname" ),
+			) );
+		}
+		$processor->add_message( "message", $self->html_phrase( "applied",
+			changes => $ul,
+		) );
+	}
+	else
+	{
+		$processor->add_message( "warning", $self->html_phrase( "no_changes" ) );
+	}
+}
+
+use EPrints::Bench;
+sub render
+{
+	my( $self ) = @_;
+
+EPrints::Bench::clear();
+	my $processor = $self->{processor};
+	my $session = $processor->{session};
+
+	my( $page, $p, $div, $link );
+
+	$page = $session->make_doc_fragment;
+
+EPrints::Bench::enter( "get_searchexp/perform_search" );
+	my $searchexp = $self->get_searchexp;
+
+	if( !defined $searchexp )
+	{
+		$processor->add_message( "error", $self->html_phrase( "invalid_cache" ) );
+		return $page;
+	}
+
+	my $list = $searchexp->perform_search;
+EPrints::Bench::leave( "get_searchexp/perform_search" );
+
+	$p = $session->make_element( "p" );
+	$page->appendChild( $p );
+	$p->appendChild( $searchexp->render_description );
+
+	$p = $session->make_element( "p" );
+	$page->appendChild( $p );
+	$p->appendChild( $session->make_text(
+		"Applying batch alterations to " . $list->count . " items"
+	) );
+
+EPrints::Bench::enter( "render_changes_form" );
+	$page->appendChild( $self->render_changes_form( $searchexp ) );
+EPrints::Bench::leave( "render_changes_form" );
+
+&EPrints::Bench::totals;
+
+	return $page;
+}
+
+sub get_fields
+{
+	my( $self, $dataset ) = @_;
+
+	my @fields;
+
+EPrints::Bench::enter("get_fields");
+	foreach my $field ($dataset->get_fields)
+	{
+		next if defined $field->{sub_name};
+#		next if $field->is_type( "set", "namedset", "subject" );
+		next if grep { $field->get_name eq $_ } @IGNORE_FIELDS;
+
+		push @fields, $field;
+	}
+EPrints::Bench::leave("get_fields");
+
+	return @fields;
+}
+
+sub get_changes
+{
+	my( $self, $dataset ) = @_;
+
+	my %changes;
+
+	my $processor = $self->{processor};
+	my $session = $processor->{session};
+
+	foreach my $field ($self->get_fields( $dataset ))
+	{
+		my $action = $field->get_name . "_action";
+		$action = $session->param( $action );
+		if( $action )
+		{
+			local $field->{multiple};
+			my $value;
+			if( $field->get_property( "multiple" ) )
+			{
+				$field->{multiple} = 0;
+			}
+			if( $field->is_type( "compound", "multilang" ) )
+			{
+				$value = $field->form_value( $session );
+			}
+			else
+			{
+				$value = $field->form_value( $session, undef, $field->get_name );
+			}
+			$changes{ $field->get_name } = {
+				action => $action,
+				value => $value,
+			};
+		}
+	}
+	
+	return %changes;
+}
+
+sub render_changes_form
+{
+	my( $self, $searchexp ) = @_;
+
+	my $processor = $self->{processor};
+	my $session = $processor->{session};
+
+	my( $page, $p, $div, $link );
+
+	$page = $session->make_doc_fragment;
+
+	my $dataset = $searchexp->get_dataset;
+
+	my @input_fields;
+
+	foreach my $field ($self->get_fields( $dataset ))
+	{
+		my @options;
+		if( $field->get_property( "multiple" ) )
+		{
+			@options = qw( clear replace insert append );
+		}
+		else
+		{
+			@options = qw( clear replace );
+		}
+
+		my $custom_field = {
+			name => $field->get_name,
+			type => "compound",
+			fields => [{
+				name => "batchedit_action",
+				sub_name => "action",
+				type => "set",
+				options => \@options,
+			}],
+		};
+
+		if( $field->is_type( "compound", "multilang" ) )
+		{
+			push @{$custom_field->{fields}}, @{$field->{fields}};
+		}
+		else
+		{
+			my %cfield = %$field;
+			delete $cfield{"multiple"};
+			$cfield{sub_name} = $cfield{name};
+			push @{$custom_field->{fields}}, \%cfield;
+		}
+
+		$custom_field = $self->custom_field_to_field( $dataset, $custom_field );
+
+		push @input_fields, $custom_field;
+	}
+
+	my %buttons = (
+		edit => "Apply Changes",
+	);
+
+EPrints::Bench::enter("render_input_form");
+	my $form = $session->render_input_form(
+		dataset => $dataset,
+		fields => \@input_fields,
+		show_help => 0,
+		show_name => 1,
+		top_buttons => \%buttons,
+		buttons => \%buttons,
+		hidden_fields => {
+			screen => $processor->{screenid},
+			cache => $searchexp->get_cache_id,
+		},
+	);
+EPrints::Bench::leave("render_input_form");
+
+	$page->appendChild( $form );
+
+	return $page;
+}
+
+sub custom_field_to_field
+{
+	my( $self, $dataset, $data ) = @_;
+
+	my $processor = $self->{processor};
+	my $session = $processor->{session};
+
+	$data->{fields_cache} = [];
+
+	foreach my $inner_field (@{$data->{fields}})
+	{
+		my $field = EPrints::MetaField->new(
+			dataset => $dataset,
+			parent_name => $data->{name},
+			show_in_html => 0,
+			%{$inner_field},
+		);
+		push @{$data->{fields_cache}}, $field;
+	}
+
+	my $field = EPrints::MetaField->new(
+		dataset => $dataset,
+		%{$data},
+	);
+
+	return $field;
+}
+
+1;
