@@ -7072,4 +7072,5 @@ PACKAGE: 2.2.99.2
     $field_conf is always an object in MetaField::Compound
  * Fixed get_ids_by_field_values for cross-database, removed mk_time & mk_date
     and added "get_id_from_value" method to MetaFields
+ * Alpha batch-editing plug-in
 
